[brianph-mdb] Fixed uneven height alignments

--- a/[BRIAN]/brianph-mdb/src/scss/_police.scss
+++ b/[BRIAN]/brianph-mdb/src/scss/_police.scss
@@ -1218,7 +1218,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 718px;
+                    height: 100%;
 
                     &-header {
 
@@ -1634,7 +1634,7 @@
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 718px;
+                    height: 100%;
 
                     &-header {
 
@@ -2747,7 +2747,7 @@ h2 {
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 718px;
+                    height: 100%;
 
                     &-header {
 
@@ -3163,7 +3163,7 @@ h2 {
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 170px 150px 1fr;
                     display: grid;
-                    height: 718px;
+                    height: 100%;
 
                     &-header {
 
@@ -5554,7 +5554,7 @@ h2 {
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 170px 150px 1fr;
                     display: grid;
-                    height: 718px;
+                    height: 100%;
 
                     &-title {
 
@@ -6152,7 +6152,7 @@ h2 {
                     grid-template-columns: 1fr;
                     grid-template-rows: 60px 50px 170px 150px 1fr;
                     display: grid;
-                    height: 718px;
+                    height: 100%;
 
                     &-title {
 
